fix(): Dark mode destructive constrast ratio improvement.
* fix(): Dark mode red constrast ratio.

* Use tailwind color.

* Fix button foreground color.

---------

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -54,8 +54,8 @@
   --accent: 240 3.7% 15.9%;
   --accent-foreground: 0 0% 98%;
 
-  --destructive: 0 62.8% 30.6%;
-  --destructive-foreground: 0 0% 98%;
+  --destructive: 0, 84%, 60%;
+  --destructive-foreground: 240 10% 3.9%;
 
   --border: 240 3.7% 15.9%;
   --input: 240 3.7% 15.9%;
